--- a/pages/station-meteo.html
+++ b/pages/station-meteo.html
@@ -69,16 +69,16 @@
 
         <div class ="chart-container">
             <div id="day-chart" style="display: block;">
-                <canvas id="temperatureChart" class="chart-weather-station"></canvas>
-                <canvas id="humidityChart" class="chart-weather-station"></canvas>
-                <canvas id="pressureChart" class="chart-weather-station"></canvas>
-                <canvas id="rainChart" class="chart-weather-station"></canvas>
+                <canvas id="dayTemperatureChart" class="chart-weather-station"></canvas>
+                <canvas id="dayHumidityChart" class="chart-weather-station"></canvas>
+                <canvas id="dayPressureChart" class="chart-weather-station"></canvas>
+                <canvas id="dayRainChart" class="chart-weather-station"></canvas>
             </div>
             <div id="week-chart" style="display: block;">
-                <canvas id="temperatureChart" class="chart-weather-station"></canvas>
-                <canvas id="humidityChart" class="chart-weather-station"></canvas>
-                <canvas id="pressureChart" class="chart-weather-station"></canvas>
-                <canvas id="rainChart" class="chart-weather-station"></canvas>
+                <canvas id="weekTemperatureChart" class="chart-weather-station"></canvas>
+                <canvas id="weekHumidityChart" class="chart-weather-station"></canvas>
+                <canvas id="weekPressureChart" class="chart-weather-station"></canvas>
+                <canvas id="weekRainChart" class="chart-weather-station"></canvas>
             </div>
         </div>
     </main>
