--- a/pages/station-meteo.html
+++ b/pages/station-meteo.html
@@ -74,7 +74,7 @@
                 <canvas id="dayPressureChart" class="chart-weather-station"></canvas>
                 <canvas id="dayRainChart" class="chart-weather-station"></canvas>
             </div>
-            <div id="week-chart" style="display: block;">
+            <div id="week-chart" style="display: none;">
                 <canvas id="weekTemperatureChart" class="chart-weather-station"></canvas>
                 <canvas id="weekHumidityChart" class="chart-weather-station"></canvas>
                 <canvas id="weekPressureChart" class="chart-weather-station"></canvas>
@@ -85,13 +85,13 @@
 
     <div id="footer-container"></div>
 
+    <script src="https://cdn.jsdelivr.net/npm/chart.js" defer></script>
     <script src="/js/header.js" defer></script>
     <script src="/js/menu.js" defer></script>
     <script src="/js/chart.js" defer></script>
     <script src="/js/color.js" defer></script>
     <script src="/js/call-api.js" defer></script>
     <script src="/js/station_meteo.js" defer></script>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js" defer></script>
     <script src="/js/footer.js" defer></script>
 </body>
 </html>
