--- a/pages/station-meteo.html
+++ b/pages/station-meteo.html
@@ -68,7 +68,7 @@
         </div>
 
         <div class ="chart-container">
-            <div id="day-chart" style="display: block;">
+            <div id="day-chart" style="display: none;">
                 <canvas id="dayTemperatureChart" class="chart-weather-station"></canvas>
                 <canvas id="dayHumidityChart" class="chart-weather-station"></canvas>
                 <canvas id="dayPressureChart" class="chart-weather-station"></canvas>
