--- a/pages/marees.html
+++ b/pages/marees.html
@@ -15,7 +15,7 @@
 
     <main class="tides-main">
         <div id="tides-container">
-            <div class="desktop-tides">
+            <div id ="desktop-tides" class="desktop-tides">
                 <script src="https://services.data.shom.fr/hdm/vignette/grande/LE_CROISIC?locale=fr"></script>
             </div>
             <div id ="mobile-tides" class="mobile-tides">
