--- a/pages/marees.html
+++ b/pages/marees.html
@@ -17,11 +17,12 @@
         <div id="tides-container">
             <div id ="desktop-tides" class="desktop-tides">
                 <script src="https://services.data.shom.fr/hdm/vignette/grande/LE_CROISIC?locale=fr"></script>
+                <div id="timeline"></div>
             </div>
             <div id ="mobile-tides" class="mobile-tides">
                 <script src="https://services.data.shom.fr/hdm/vignette/petite/LE_CROISIC?locale=fr"></script>
+                <div id="timeline" class="desktop-tides"></div>
             </div>
-            <div id="timeline" class="desktop-tides"></div>
         </div>
     </main>
 
