split css + traduction des pages en anglais

--- a/pages/legal-notices.html
+++ b/pages/legal-notices.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mentions Légales - Météo au Croisic</title>
-    <link rel="stylesheet" href="/css/styles.css"> <!-- Assure-toi que le chemin est correct -->
+    <link rel="stylesheet" href="/css/base.css">
+    <link rel="stylesheet" href="/css/header.css">
+    <link rel="stylesheet" href="/css/menu.css">
+    <link rel="stylesheet" href="/css/footer.css">
 </head>
 <body>
     <div id="header-container"></div>
