--- a/pages/weather-station.html
+++ b/pages/weather-station.html
@@ -5,7 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Station météo - Météo Croisic</title>
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="/css/base.css">
+    <link rel="stylesheet" href="/css/header.css">
+    <link rel="stylesheet" href="/css/menu.css">
+    <link rel="stylesheet" href="/css/footer.css">
+    <link rel="stylesheet" href="/css/weather-station.css">
 </head>
 
 <body>
@@ -91,7 +95,7 @@
     <script src="/js/chart.js" defer></script>
     <script src="/js/color.js" defer></script>
     <script src="/js/call-api.js" defer></script>
-    <script src="/js/station_meteo.js" defer></script>
+    <script src="/js/weather-station.js" defer></script>
     <script src="/js/footer.js" defer></script>
 </body>
 </html>
