--- a/pages/weather-forecast.html
+++ b/pages/weather-forecast.html
@@ -7,7 +7,10 @@
     <meta name="description"
         content="Prévisions météo pour Le Croisic : précipitations, températures, vent, etc. Consultez la météo pour les prochaines 24 heures et les 7 prochains jours.">
     <title>Prévisions - Météo Croisic</title>
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="/css/base.css">
+    <link rel="stylesheet" href="/css/header.css">
+    <link rel="stylesheet" href="/css/menu.css">
+    <link rel="stylesheet" href="/css/footer.css">
 </head>
 
 <body>
