--- a/pages/weather-forecast.html
+++ b/pages/weather-forecast.html
@@ -47,6 +47,7 @@
 
     <script src="/js/header.js" defer></script>
     <script src="/js/menu.js" defer></script>
+    <script src="/js/call-api.js" defer></script>
     <script src="/js/footer.js" defer></script>
 </body>
 
