--- a/pages/weather-forecast.html
+++ b/pages/weather-forecast.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="/css/header.css">
     <link rel="stylesheet" href="/css/menu.css">
     <link rel="stylesheet" href="/css/footer.css">
+    <link rel="stylesheet" href="/css/weather-forecast.css">
 </head>
 
 <body>
@@ -34,19 +35,19 @@
             <div id="day-container-tab" class="weather-forecast-tab">
                 <table>
                     <thead>
-                      <tr>
-                        <th>Heure</th>
-                        <th>Température (°C)</th>
-                        <th>Humidité (%)</th>
-                        <th>Pression (hPa)</th>
-                        <th>Vent (km/h)</th>
-                        <th>Indice UV</th>
-                        <th>Conditions</th>
-                      </tr>
-                    </thead>
-                    <tbody>
-                    </tbody>
-                  </table>
+                        <tr>
+                          <th>Jour</th>
+                          <th>Heure</th>
+                          <th>Température (°C)</th>
+                          <th>Humidité (%)</th>
+                          <th>Pression (hPa)</th>
+                          <th>Vent (m/s)</th>
+                          <th>Indice UV</th>
+                          <th>Conditions</th>
+                        </tr>
+                      </thead>
+                      <tbody></tbody>
+                </table>
             </div>
             <div id="day-container-graphs"></div>
         </div>
