--- a/pages/weather-forecast.html
+++ b/pages/weather-forecast.html
@@ -41,7 +41,9 @@
                           <th>Température (°C)</th>
                           <th>Humidité (%)</th>
                           <th>Pression (hPa)</th>
-                          <th>Vent (km/h)</th>
+                          <th>Vent moyen (km/h)</th>
+                          <th>Vent rafales (km/h)</th>
+                          <th>Direction du vent</th>
                           <th>Indice UV</th>
                           <th>Conditions</th>
                         </tr>
