--- a/pages/weather-forecast.html
+++ b/pages/weather-forecast.html
@@ -44,6 +44,7 @@
                           <th>Vent moyen (km/h)</th>
                           <th>Vent rafales (km/h)</th>
                           <th>Direction du vent</th>
+                          <th>Pluie (%)</th>
                           <th>Indice UV</th>
                           <th>Conditions</th>
                         </tr>
