--- a/pages/weather-forecast.html
+++ b/pages/weather-forecast.html
@@ -38,13 +38,13 @@
                         <tr>
                           <th>Jour</th>
                           <th>Heure</th>
-                          <th>Température (°C)</th>
-                          <th>Humidité (%)</th>
-                          <th>Pression (hPa)</th>
-                          <th>Vent moyen (km/h)</th>
-                          <th>Vent rafales (km/h)</th>
+                          <th>Température<br>(°C)</th>
+                          <th>Humidité<br>(%)</th>
+                          <th>Pression<br>(hPa)</th>
+                          <th>Vent moyen<br>(km/h)</th>
+                          <th>Vent rafales<br>(km/h)</th>
                           <th>Direction du vent</th>
-                          <th>Pluie (%)</th>
+                          <th>Pluie<br>(%)</th>
                           <th>Indice UV</th>
                           <th>Conditions</th>
                         </tr>
