--- a/pages/weather-forecast.html
+++ b/pages/weather-forecast.html
@@ -20,7 +20,7 @@
 
     <main>
 
-        <div id="vigilance-container">
+        <div id="vigilance-container" style="display: none;">
             <div id="icon-container">
                 <img id="vigilance-icon">
             </div>
