--- a/pages/weather-forecast.html
+++ b/pages/weather-forecast.html
@@ -32,8 +32,8 @@
 
         <div id="day-container">
             <h2>Météo pour les prochaines 24h</h2>
-            <div id="day-container-tab" class="weather-forecast-tab">
-                <table>
+            <div id="day-container-tab">
+                <table class="weather-forecast-table">
                     <thead>
                         <tr>
                           <th>Jour</th>
@@ -57,7 +57,7 @@
 
         <div id="week-container">
             <h2>Météo pour les 7 prochains jours</h2>
-            <div id="week-container-tab" class="weather-forecast-tab"></div>
+            <div id="week-container-tab"></div>
             <div id="week-container-graphs"></div>
         </div>
 
