--- a/pages/weather-forecast.html
+++ b/pages/weather-forecast.html
@@ -30,9 +30,9 @@
             </div>
         </div>
 
-        <div id="day-container">
+        <div id="day-container" class="forecast-container">
             <h2>Météo pour les prochaines 24h</h2>
-            <div id="day-container-tab">
+            <div id="day-container-tab" class="container-tab">
                 <table class="weather-forecast-table">
                     <thead>
                         <tr>
@@ -55,9 +55,9 @@
             <div id="day-container-graphs"></div>
         </div>
 
-        <div id="week-container">
+        <div id="week-container" class="forecast-container">
             <h2>Météo pour les 7 prochains jours</h2>
-            <div id="week-container-tab"></div>
+            <div id="week-container-tab" class="container-tab"></div>
             <div id="week-container-graphs"></div>
         </div>
 
