--- a/pages/weather-forecast.html
+++ b/pages/weather-forecast.html
@@ -43,9 +43,9 @@
                           <th>Pression<br>(hPa)</th>
                           <th>Vent moyen<br>(km/h)</th>
                           <th>Vent rafales<br>(km/h)</th>
-                          <th>Direction du vent</th>
+                          <th>Direction<br>du vent</th>
                           <th>Pluie<br>(%)</th>
-                          <th>Indice UV</th>
+                          <th>Indice<br>UV</th>
                           <th>Conditions</th>
                         </tr>
                       </thead>
