--- a/pages/weather-station.html
+++ b/pages/weather-station.html
@@ -92,8 +92,8 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js" defer></script>
     <script src="/js/header.js" defer></script>
     <script src="/js/menu.js" defer></script>
-    <script src="/js/chart.js" defer></script>
-    <script src="/js/color.js" defer></script>
+    <script src="/js/charts.js" defer></script>
+    <script src="/js/colors.js" defer></script>
     <script src="/js/call-api.js" defer></script>
     <script src="/js/weather-station.js" defer></script>
     <script src="/js/footer.js" defer></script>
