--- a/pages/weather-forecast.html
+++ b/pages/weather-forecast.html
@@ -67,7 +67,8 @@
 
     <script src="/js/header.js" defer></script>
     <script src="/js/menu.js" defer></script>
-    <script src="/js/color.js" defer></script>
+    <script src="/js/colors.js" defer></script>
+    <script src="/js/icons.js" defer></script>
     <script src="/js/call-api.js" defer></script>
     <script src="/js/weather-forecast.js" defer></script>
     <script src="/js/footer.js" defer></script>
