--- a/pages/weather-forecast.html
+++ b/pages/weather-forecast.html
@@ -38,13 +38,13 @@
                         <tr>
                           <th>Jour</th>
                           <th>Heure</th>
-                          <th>Température<br>(°C)</th>
-                          <th>Humidité<br>(%)</th>
-                          <th>Pression<br>(hPa)</th>
-                          <th>Vent moyen<br>(km/h)</th>
-                          <th>Vent rafales<br>(km/h)</th>
+                          <th>Température<br><small>(°C)</small></th>
+                          <th>Humidité<br><small>(%)</small></th>
+                          <th>Pression<br><small>(hPa)</small></th>
+                          <th>Vent moyen<br><small>(km/h)</small></th>
+                          <th>Vent rafales<br><small>(km/h)</small></th>
                           <th>Direction<br>du vent</th>
-                          <th>Pluie<br>(%)</th>
+                          <th>Pluie<br><small>(%)</small></th>
                           <th>Indice<br>UV</th>
                           <th>Conditions</th>
                         </tr>
