footer local storage

--- a/pages/weather-forecast.html
+++ b/pages/weather-forecast.html
@@ -71,7 +71,7 @@
     <script src="/js/icons.js" defer></script>
     <script src="/js/call-api.js" defer></script>
     <script src="/js/weather-forecast.js" defer></script>
-    <script src="/js/footer.js" defer></script>
+    <script src="/js/footer-loader.js" defer></script>
 </body>
 
 </html>
