--- a/pages/weather-station.html
+++ b/pages/weather-station.html
@@ -96,6 +96,6 @@
     <script src="/js/colors.js" defer></script>
     <script src="/js/call-api.js" defer></script>
     <script src="/js/weather-station.js" defer></script>
-    <script src="/js/footer.js" defer></script>
+    <script src="/js/footer-loader.js" defer></script>
 </body>
 </html>
