--- a/pages/climat-croisic.html
+++ b/pages/climat-croisic.html
@@ -26,7 +26,7 @@
 
     <script src="/js/header.js" defer></script>
     <script src="/js/menu.js" defer></script>
-    <script src="/js/footer.js" defer></script>
+    <script src="/js/footer-loader.js" defer></script>
 </body>
 
 </html>
