--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 
     <div id="footer-container"></div>
 
-    <script src="/js/header.js" defer></script>
+    <script src="/js/header-loader.js" defer></script>
     <script src="/js/menu.js" defer></script>
-    <script src="/js/footer-loader.js" defer></script>
+    <script src="/js/footer.js" defer></script>
 </body>
 
 </html>
