--- a/pages/climat-croisic.html
+++ b/pages/climat-croisic.html
@@ -24,7 +24,7 @@
 
     <div id="footer-container"></div>
 
-    <script src="/js/header.js" defer></script>
+    <script src="/js/header-loader.js" defer></script>
     <script src="/js/menu.js" defer></script>
     <script src="/js/footer-loader.js" defer></script>
 </body>
