--- a/pages/weather-station.html
+++ b/pages/weather-station.html
@@ -90,7 +90,7 @@
     <div id="footer-container"></div>
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js" defer></script>
-    <script src="/js/header.js" defer></script>
+    <script src="/js/header-loader.js" defer></script>
     <script src="/js/menu.js" defer></script>
     <script src="/js/charts.js" defer></script>
     <script src="/js/colors.js" defer></script>
