--- a/pages/legal-notices.html
+++ b/pages/legal-notices.html
@@ -42,7 +42,7 @@
     <div id="footer-container"></div>
 
     <script src="/js/header-loader.js" defer></script>
-    <script src="/js/menu.js" defer></script>
+    <script src="/js/menu-loader.js" defer></script>
     <script src="/js/footer-loader.js" defer></script>
 </body>
 </html>
