--- a/pages/weather-forecast.html
+++ b/pages/weather-forecast.html
@@ -66,7 +66,7 @@
     <div id="footer-container"></div>
 
     <script src="/js/header-loader.js" defer></script>
-    <script src="/js/menu.js" defer></script>
+    <script src="/js/menu-loader.js" defer></script>
     <script src="/js/colors.js" defer></script>
     <script src="/js/icons.js" defer></script>
     <script src="/js/call-api.js" defer></script>
