--- a/pages/weather-station.html
+++ b/pages/weather-station.html
@@ -91,7 +91,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js" defer></script>
     <script src="/js/header-loader.js" defer></script>
-    <script src="/js/menu.js" defer></script>
+    <script src="/js/menu-loader.js" defer></script>
     <script src="/js/charts.js" defer></script>
     <script src="/js/colors.js" defer></script>
     <script src="/js/call-api.js" defer></script>
