réorga js loader

--- a/pages/tides.html
+++ b/pages/tides.html
@@ -28,10 +28,10 @@
 
     <div id="footer-container"></div>
 
-    <script src="/js/header-loader.js" defer></script>
-    <script src="/js/menu-loader.js" defer></script>
+    <script src="/js/loader/header-loader.js" defer></script>
+    <script src="/js/loader/menu-loader.js" defer></script>
     <script src="/js/tides.js" defer></script>
-    <script src="/js/footer-loader.js" defer></script>
+    <script src="/js/loader/footer-loader.js" defer></script>
 </body>
 
 </html>
