--- a/pages/weather-forecast.html
+++ b/pages/weather-forecast.html
@@ -65,13 +65,13 @@
 
     <div id="footer-container"></div>
 
-    <script src="/js/header-loader.js" defer></script>
-    <script src="/js/menu-loader.js" defer></script>
+    <script src="/js/loader/header-loader.js" defer></script>
+    <script src="/js/loader/menu-loader.js" defer></script>
     <script src="/js/colors.js" defer></script>
     <script src="/js/icons.js" defer></script>
     <script src="/js/call-api.js" defer></script>
     <script src="/js/weather-forecast.js" defer></script>
-    <script src="/js/footer-loader.js" defer></script>
+    <script src="/js/loader/footer-loader.js" defer></script>
 </body>
 
 </html>
