--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 
     <div id="footer-container"></div>
 
-    <script src="/js/header-loader.js" defer></script>
-    <script src="/js/menu-loader.js" defer></script>
+    <script src="/js/loader/header-loader.js" defer></script>
+    <script src="/js/loader/menu-loader.js" defer></script>
     <script src="/js/footer.js" defer></script>
 </body>
 
