--- a/pages/weather-station.html
+++ b/pages/weather-station.html
@@ -90,12 +90,12 @@
     <div id="footer-container"></div>
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js" defer></script>
-    <script src="/js/header-loader.js" defer></script>
-    <script src="/js/menu-loader.js" defer></script>
+    <script src="/js/loader/header-loader.js" defer></script>
+    <script src="/js/loader/menu-loader.js" defer></script>
     <script src="/js/charts.js" defer></script>
     <script src="/js/colors.js" defer></script>
     <script src="/js/call-api.js" defer></script>
     <script src="/js/weather-station.js" defer></script>
-    <script src="/js/footer-loader.js" defer></script>
+    <script src="/js/loader/footer-loader.js" defer></script>
 </body>
 </html>
