--- a/pages/weather-forecast.html
+++ b/pages/weather-forecast.html
@@ -30,7 +30,7 @@
             </div>
         </div>
 
-        <div id="day-container" class="forecast-container">
+        <div id="day-container" class="weather-forecast">
             <h2>Météo pour les prochaines 24h</h2>
             <div id="day-container-tab" class="container-tab">
                 <table class="weather-forecast-table">
@@ -52,13 +52,13 @@
                       <tbody></tbody>
                 </table>
             </div>
-            <div id="day-container-graphs"></div>
+            <div id="day-container-graphs" class="container-graph"></div>
         </div>
 
-        <div id="week-container" class="forecast-container">
+        <div id="week-container" class="weather-forecast">
             <h2>Météo pour les 7 prochains jours</h2>
             <div id="week-container-tab" class="container-tab"></div>
-            <div id="week-container-graphs"></div>
+            <div id="week-container-graphs" class="container-graph"></div>
         </div>
 
     </main>
