--- a/pages/weather-forecast.html
+++ b/pages/weather-forecast.html
@@ -52,13 +52,13 @@
                       <tbody></tbody>
                 </table>
             </div>
-            <div id="day-container-graphs" class="container-graph"></div>
+            <div id="day-container-graphs" class="container-graphs"></div>
         </div>
 
         <div id="week-container" class="weather-forecast">
             <h2>Météo pour les 7 prochains jours</h2>
             <div id="week-container-tab" class="container-tab"></div>
-            <div id="week-container-graphs" class="container-graph"></div>
+            <div id="week-container-graphs" class="container-graphs"></div>
         </div>
 
     </main>
