--- a/pages/weather-forecast.html
+++ b/pages/weather-forecast.html
@@ -30,8 +30,8 @@
             </div>
         </div>
 
+        <h2>Météo pour les prochaines 24h</h2>
         <div id="day-container" class="weather-forecast">
-            <h2>Météo pour les prochaines 24h</h2>
             <div id="day-container-tab" class="container-tab">
                 <table class="weather-forecast-table">
                     <thead>
@@ -52,13 +52,23 @@
                       <tbody></tbody>
                 </table>
             </div>
-            <div id="day-container-graphs" class="container-graphs"></div>
+            <div id="day-container-graphs" class="container-graphs">
+                <canvas class="chart-weather-forecast"></canvas>
+                <canvas class="chart-weather-forecast"></canvas>
+                <canvas class="chart-weather-forecast"></canvas>
+                <canvas class="chart-weather-forecast"></canvas>
+            </div>
         </div>
 
+        <h2>Météo pour les 7 prochains jours</h2>
         <div id="week-container" class="weather-forecast">
-            <h2>Météo pour les 7 prochains jours</h2>
             <div id="week-container-tab" class="container-tab"></div>
-            <div id="week-container-graphs" class="container-graphs"></div>
+            <div id="week-container-graphs" class="container-graphs">
+                <canvas class="chart-weather-forecast"></canvas>
+                <canvas class="chart-weather-forecast"></canvas>
+                <canvas class="chart-weather-forecast"></canvas>
+                <canvas class="chart-weather-forecast"></canvas>
+            </div>
         </div>
 
     </main>
