--- a/pages/weather-forecast.html
+++ b/pages/weather-forecast.html
@@ -46,7 +46,7 @@
                           <th>Direction<br>du vent</th>
                           <th>Pluie<br><small>(%)</small></th>
                           <th>Indice<br>UV</th>
-                          <th>Conditions</th>
+                          <th>Temps</th>
                         </tr>
                       </thead>
                       <tbody></tbody>
