--- a/pages/weather-forecast.html
+++ b/pages/weather-forecast.html
@@ -80,6 +80,7 @@
     <script src="/js/colors.js" defer></script>
     <script src="/js/icons.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns@3"></script>
     <script src="/js/call-api.js" defer></script>
     <script src="/js/weather-forecast.js" defer></script>
     <script src="/js/loader/footer-loader.js" defer></script>
