--- a/pages/weather-forecast.html
+++ b/pages/weather-forecast.html
@@ -83,7 +83,7 @@
     <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns@3"></script>
     <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns@3.0.0/dist/chartjs-adapter-date-fns.bundle.min.js"></script>
     <script src="/js/call-api.js" defer></script>
-    <script src="/js/weather-forecast.js" defer></script>
+    <script type="module" src="/js/weather-forecast.js" defer></script>
     <script src="/js/loader/footer-loader.js" defer></script>
 </body>
 
