--- a/pages/weather-forecast.html
+++ b/pages/weather-forecast.html
@@ -84,7 +84,7 @@
           "imports": {
             "chart.js": "https://cdn.jsdelivr.net/npm/chart.js@4.4.1/dist/chart.js",
             "chartjs-adapter-date-fns": "https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns@3.0.0/dist/chartjs-adapter-date-fns.esm.js",
-            "date-fns/locale/fr": "https://esm.sh/date-fns@3.6.0/locale/fr/index.js"
+            "date-fns/locale/fr": "https://esm.sh/v135/date-fns@3.6.0/locale/fr"
           }
         }
       </script>
