--- a/pages/weather-forecast.html
+++ b/pages/weather-forecast.html
@@ -84,10 +84,11 @@
           "imports": {
             "chart.js": "https://cdn.jsdelivr.net/npm/chart.js@4.4.1/dist/chart.js",
             "chartjs-adapter-date-fns": "https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns@3.0.0/dist/chartjs-adapter-date-fns.esm.js",
+            "date-fns": "https://esm.sh/v135/date-fns@3.6.0",
             "date-fns/locale/fr": "https://esm.sh/v135/date-fns@3.6.0/locale/fr"
           }
         }
-      </script>
+    </script>
     <script src="/js/call-api.js" defer></script>
     <script type="module" src="/js/weather-forecast.js" defer></script>
     <script src="/js/loader/footer-loader.js" defer></script>
