--- a/pages/weather-forecast.html
+++ b/pages/weather-forecast.html
@@ -65,21 +65,24 @@
             <div id="week-container-tab" class="container-tab">
                 <table class="weather-forecast-table">
                     <thead>
-                        <tr>
-                          <th>Jour</th>
-                          <th>Température min<br><small>(°C)</small></th>
-                          <th>Température max<br><small>(°C)</small></th>
-                          <th>Pression<br><small>(hPa)</small></th>
-                          <th>Vent moyen<br><small>(km/h)</small></th>
-                          <th>Vent rafales<br><small>(km/h)</small></th>
-                          <th>Direction<br>du vent</th>
-                          <th>Pluie<br><small>(%)</small></th>
-                          <th>Indice<br>UV</th>
-                          <th>Temps</th>
-                        </tr>
-                      </thead>
-                      <tbody></tbody>
-                </table>
+                      <tr>
+                        <th>Données</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr><td>Condition (jour)</td></tr>
+                      <tr><td>Condition (nuit)</td></tr>
+                      <tr><td>Température max / min (°C)</td></tr>
+                      <tr><td>Humidité (jour / nuit)</td></tr>
+                      <tr><td>Indice UV (jour / nuit)</td></tr>
+                      <tr><td>Vent (jour)</td></tr>
+                      <tr><td>Vent (nuit)</td></tr>
+                      <tr><td>Rafales (jour / nuit)</td></tr>
+                      <tr><td>Couverture nuageuse (jour / nuit)</td></tr>
+                      <tr><td>Pluie (jour / nuit)</td></tr>
+                      <tr><td>Lever / Coucher du soleil</td></tr>
+                    </tbody>
+                  </table>
             </div>
             <div id="week-container-graphs" class="container-graphs">
                 <canvas id="chart-temperature-week" class="chart-weather-forecast"></canvas>
