--- a/pages/weather-forecast.html
+++ b/pages/weather-forecast.html
@@ -49,7 +49,7 @@
                           <th>Temps</th>
                         </tr>
                       </thead>
-                      <tbody></tbody>
+                      <tbody id ="day-forecast-body"></tbody>
                 </table>
             </div>
             <div id="day-container-graphs" class="container-graphs">
@@ -63,7 +63,7 @@
         <h2>Météo pour les 7 prochains jours</h2>
         <div id="week-container" class="weather-forecast">
             <div id="week-container-tab" class="container-tab">
-                <table class="weather-forecast-table">
+                <table id= "week-forecast-tab" class="weather-forecast-table">
                     <thead>
                       <tr>
                         <th>Données</th>
